scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptobuyer-admin
  namespace: cryptobuyer-admin
  labels:
    app: cryptobuyer-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cryptobuyer-admin
  template:
    metadata:
      labels:
        app: cryptobuyer-admin
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: cryptobuyer-admin
          image: registry.thecodeworkers.com/cryptobuyer-admin:latest
          ports:
            - name: http-port
              containerPort: 80
          volumeMounts:
            - name: cryptobuyer-admin
              mountPath: /var/www/html
      volumes:
        - name: cryptobuyer-admin
          persistentVolumeClaim:
            claimName: cryptobuyer-admin-claim
